Add auth endpoints, stubbed in with mock data
